# simple-streamlit-project

./: README.md  app.py  main.py  pyproject.toml
ml_models/: adaboost.pkl  decision_tree.pkl  ensemble_soft_voting.pkl  gradient_boosting.pkl  k-nn.pkl  model_performance.csv  naïve_bayes.pkl  random_forest.pkl  xgboost.pkl
notebooks/: train_models.ipynb
